02.KubernetesInAction/05.Service/nodejs-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nodejs-deploy
  name: nodejs-deploy
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
      - image: rolroralra/nodejs
        imagePullPolicy: Always
        name: nodejs
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
