02.KubernetesInAction/05.Service/ext-name-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ext-name-svc
  name: ext-name-svc
  namespace: default
spec:
  type: ExternalName
  externalName: www.naver.com
  ports:
  - name: http
    port: 80
