02.KubernetesInAction/05.Service/ext-svc-by-endpoints.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ext-svc
  name: ext-svc
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    app: ext-svc
  name: ext-svc
  namespace: default
subsets:
  - addresses:
    - ip: 125.209.222.141
    - ip: 125.209.222.142
    ports:
    - name: http
      port: 80
      protocol: TCP
