02.KubernetesInAction/05.Service/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: headless-svc
  name: headless-svc
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: nodejs
