02.KubernetesInAction/05.Service/kubia-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kubia-svc-np
  name: kubia-svc-np
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
    nodePort: 30001
  selector:
    app: kubia
  type: NodePort
