02.KubernetesInAction/05.Service/nodejs-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodejs-headless-svc
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "false"
  name: nodejs-headless-svc
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: false
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: nodejs
