02.KubernetesInAction/05.Service/nodejs-np-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodejs-np-svc
  name: nodejs-np-svc
spec:
  type: NodePort
  sessionAffinity: None
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    targetPort: http
    nodePort: 30001
    protocol: TCP
  selector:
    app: nodejs-deploy
