02.KubernetesInAction/05.Service/nodejs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodejs-svc
  name: nodejs-svc
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: nodejs-deploy
