02.KubernetesInAction/05.Service/nodejs-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nodejs-ingress
  namespace: default
  labels:
    app: nodejs-ingress
spec:
  rules:
  - host: nodejs-np.rolroralra.com 
    http:
      paths:
      - path: /
        backend:
          serviceName: nodejs-np-svc
          servicePort: http
#  - host: nodejs-lb.rolroralra.com 
#    http:
#      paths:
#      - path: /
#        backend:
#          serviceName: nodejs-lb-svc
#          servicePort: http
#  - host: nodejs.rolroralra.com 
#    http:
#      paths:
#      - path: /
#        backend:
#          serviceName: nodejs-svc
#          servicePort: http
